--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Depot</title>
+
+<head>
+    <title>Pragprog Books Online Store</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%
+=begin%>
+ <%= stylesheet_link_tag "inter-font", "data-turbo-track": "reload" %> 
+<%
+=end%>
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-  </head>
+</head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
-  </body>
+<body>
+    <header class="bg-green-700">
+        <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
+        <h1><%= @page_title %></h1>
+    </header>
+
+    <section class="flex">
+        <nav class="bg-green-900 p-6">
+            <ul class="text-gray-300 leading-8">
+                <li><a href="/">Home</a></li>
+                <li><a href="/questions">Questions</a></li>
+                <li><a href="/news">News</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <main class="container mx-auto mt-4 px-5 flex">
+            <%= yield %> 
+            <%
+=begin%>
+ to add the body content from different views  
+<%
+=end%>
+        </main>
+    </section>
+</body>
+
 </html>
