--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,6 +1,6 @@
 <%
 =begin%>
- <div class="w-full">
+<div class="w-full">
     <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg
 inline-block" id="notice">
@@ -28,10 +28,9 @@ class: 'object-contain w-40 h-48 shadow mr-6') %>
         </li>
         <% end %>
     </ul>
-</div> 
+</div>
 <%
 =end%>
-
 
 
 
@@ -52,7 +51,6 @@ inline-block" id="notice">
         <li class='flex mb-6'>
             <%= image_tag(product.image_url,
 class: 'object-contain w-40 h-48 shadow mr-6') %>
-
             <div>
                 <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
                 <p>
@@ -60,6 +58,11 @@ class: 'object-contain w-40 h-48 shadow mr-6') %>
                 </p>
                 <div class="mt-3">
                     <%= number_to_currency(product.price) %>
+                    <%= button_to 'Add to Cart',
+ line_items_path(product_id: product),
+ form_class: 'inline',
+ class: 'ml-4 rounded-lg py-1 px-2
+text-white bg-green-600' %>
                 </div>
             </div>
         </li>
